<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lay"
    tools:context=".ShowActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="157dp"
        android:layout_height="67dp"
        android:text="Back"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="445dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="41dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="345dp" />
</androidx.constraintlayout.widget.ConstraintLayout>